<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Screen">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/login_hello"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/hello" />
    <TextView
        android:id="@+id/login_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/login_hello"
        android:textAppearance="@style/login_hello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/login_hello_description"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/login_hello_description"
        android:textAppearance="@style/login_hello_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_hello" />
    <TextView
        android:id="@+id/login_email"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/login_email"
        android:textAppearance="@style/login_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_hello_description" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edittext_login_email"
        android:hint="@string/login_email_example"
        android:inputType="textEmailAddress"
        android:padding="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="335dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/login_button"
        android:enabled="false"
        android:textAlignment="center"
        android:textAppearance="@style/login_button"
        android:background="@drawable/bg_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />


</androidx.constraintlayout.widget.ConstraintLayout>