<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_slidebar">

    <TextView
        android:id="@+id/skip"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/finaly"
        android:textAlignment="center"
        android:clickable="true"
        android:textAppearance="@style/skip_slidebar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/analization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/monitoring"
        android:textAppearance="@style/Analization"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skip" />

    <TextView
        android:id="@+id/discription_slidebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="80dp"
        android:text="@string/discription_monitoring_slidebar"
        android:textAlignment="center"
        android:textAppearance="@style/discription_slidebar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/analization" />

    <View
        android:id="@+id/ellipse_1"
        android:layout_width="13dp"
        android:layout_height="13dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="159dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/slidebar_ellipse"
        app:layout_constraintEnd_toEndOf="@+id/ellipse_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discription_slidebar" />

    <View
        android:id="@+id/ellipse_2"
        android:layout_width="13dp"
        android:layout_height="13dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/slidebar_ellipse"
        app:layout_constraintEnd_toEndOf="@+id/ellipse_3"
        app:layout_constraintStart_toStartOf="@+id/ellipse_1"
        app:layout_constraintTop_toBottomOf="@+id/discription_slidebar" />

    <View
        android:id="@+id/ellipse_3"
        android:layout_width="13dp"
        android:layout_height="13dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="158dp"
        android:background="@drawable/slidebar_ellipse_fill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ellipse_2"
        app:layout_constraintTop_toBottomOf="@+id/discription_slidebar" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ellipse_2"
        app:srcCompat="@drawable/illustration_slidebar_3" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shape_slidebar" />
</androidx.constraintlayout.widget.ConstraintLayout>